<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5"
    tools:context="com.memorease.laclair.android.myapplication.MainActivity">

    <TextView
        android:id="@+id/app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp"
        android:text="Welcome!"
        android:textColor="@android:color/background_dark"
        android:textSize="32sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="150dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/createCardButton"
            style="@style/MainActivityButton"
            android:onClick="sendToCreateCardActivity"
            android:text="@string/create_card"
            android:background="#3d5afe"
            android:textColor="#ffffff"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/topicsButton"
            style="@style/MainActivityButton"
            android:onClick="sendToAllTopicsActivity"
            android:text="@string/topics"
            android:background="#3d5afe"
            android:textColor="#ffffff"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/todaysStudyButton"
            style="@style/MainActivityButton"
            android:onClick="sendToTodaysStudyActivity"
            android:text="@string/todays_study"
            android:background="#3d5afe"
            android:textColor="#ffffff"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/myScoresButton"
            style="@style/MainActivityButton"
            android:onClick="sendToMyScoresActivity"
            android:text="@string/my_scores"
            android:background="#3d5afe"
            android:textColor="#ffffff"
            android:textSize="16sp" />
    </LinearLayout>

</RelativeLayout>
